[package]
name = "drone"
version = "0.3.0"
edition = "2021"
authors = ["Deathwing <hi@deathwing.me>"]
description = "A caching reverse-proxy application for the Hive blockchain."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
ureq = { version = "2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
serde_yaml = "0.8"
humantime = "2.1.0"
config = "0.13.3"
actix-cors = "0.7.0"
async-recursion = "1.0.5"
quick_cache = "0.6"
sequence_trie = "0.3.6"
chrono = "0.4.34"
tokio = { version = "1.36.0", features = ["sync"] }
actix-request-identifier = "4.1.0"
log = { version = "0.4.21", features = ["kv"] }
env_logger = { version = "0.11.3", features = ["unstable-kv"] }
sha256 = "1.5.0"
prometheus = "0.13"
lazy_static = "1.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling"] }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"] }
